fix(Text): added text-overflow: ellipsis, so that long text does not clip

--- a/frontend/src/app/okrview/navigation-sidebar/navigation-sidebar.component.scss
+++ b/frontend/src/app/okrview/navigation-sidebar/navigation-sidebar.component.scss
@@ -19,4 +19,7 @@
   font-weight: bold;
   min-height: 40px;
   background-color: #b81f40;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
 }
